Fixed flex wrap issue in quote section.

--- a/style.css
+++ b/style.css
@@ -143,8 +143,7 @@ a {
 }
 
 .quote-box {
-  width: 800px;
-  margin: 100px 0;
+  margin: 100px 200px;
 }
 
 .quote-text {
